# eco-stats

./: .env.example  .env.template  CLAUDE.md  LICENSE  README.md  api_client.py  ces_national.ipynb  ces_state.ipynb  config.py  pyproject.toml  qcew.ipynb  scratch.ipynb  setup.py  test_config.py
archive/: qcew.ipynb
docs/: QUICK_REFERENCE.md
eco_stats/: __init__.py  __main__.py
eco_stats/api/: __init__.py  bea_client.py  bls_client.py  census_client.py  fred_client.py
eco_stats/utils/: __init__.py  helpers.py
examples/: bea_example.py  bls_example.py  census_example.py  fred_example.py  unified_example.py  utilities_example.py
src/eco_stats/: __init__.py  __main__.py
src/eco_stats/api/: __init__.py  bea_client.py  bls_client.py  census_client.py  fred_client.py
src/eco_stats/api/bls/: __init__.py  client.py  flat_files.py  programs.py  qcew.py  series_id.py
src/eco_stats/utils/: __init__.py  helpers.py
src/eco_stats/vintage/: __init__.py  bls_schedule.py  cli.py
tests/: __init__.py  test_basic.py  test_bls.py
