[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eco-stats"
version = "0.1.0"
description = "A Python library for pulling statistical series from BEA, BLS, Census, and FRED APIs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Lowell Mason"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "polars>=1.8.2",
    "python-dotenv==1.0.0",
    "requests>=2.31.0",
    "urllib3>=1.26.0,<2.0.0", # Pin to v1.x for LibreSSL compatibility
]

[project.optional-dependencies]
polars = ["polars>=0.20.0"]
pandas = ["pandas>=1.3.0"]  # Legacy support, prefer polars
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
eco-stats = "eco_stats.__main__:main"

[project.urls]
Homepage = "https://github.com/lowmason/eco-stats"
Repository = "https://github.com/lowmason/eco-stats"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), and isort (I) rules
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
# Use single quotes for strings
quote-style = "single"
# Indent with spaces
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["src/eco_stats"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
